--- a/sites/all/themes/slac/sass/components/_calendar-mobile.scss
+++ b/sites/all/themes/slac/sass/components/_calendar-mobile.scss
@@ -285,12 +285,12 @@
 
     .day-view #multi-day-container table td.first,
     .day-view #single-day-container table.full td.first  {
-      width: 40%;
+      width: 30%;
     }
 
     .day-view #multi-day-container table td.last,
     .day-view #single-day-container table.full td.last {
-      width: 60%;
+      width: 70%;
     }
 
     .time {
